# datadoggo-v3-alpaca

./: .env.example  README.md  design.md  pyproject.toml
docs/: design.md
src/datadoggo_v3_alpaca/: __init__.py  __main__.py
src/datadoggo_v3_alpaca/clients/: __init__.py  alpaca.py
src/datadoggo_v3_alpaca/config/: __init__.py  settings.py
src/datadoggo_v3_alpaca/fetchers/: __init__.py  _base.py  assets.py  crypto.py  news.py  option.py  option_contracts.py  stock.py
src/datadoggo_v3_alpaca/models/: tables.py
src/datadoggo_v3_alpaca/repository/: __init__.py  postgres.py
src/datadoggo_v3_alpaca/services/: __init__.py  historical.py  symbol_sync.py
src/datadoggo_v3_alpaca/tasks/: fetch.py
src/datadoggo_v3_alpaca/utils/: logger.py  retry.py
tests/: conftest.py  test_settings.py
tests/fetchers/: test_assets.py  test_news.py  test_option_contracts.py  test_stock.py
tests/repository/: test_postgres.py
tests/services/: __init__.py  test_symbol_sync.py
tests/utils/: __init__.py  test_retry.py
