[project]
name = "datadoggo-v3-alpaca"
version = "0.1.0"
description = "Alpacaのヒストリカルデータ取得と保存のためのユーティリティ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.22.0",
    "pandas>=2.2.2",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.6",
    "responses>=0.25.0",
    "pyfakefs>=5.5.0",
]


[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]  # import order

[tool.ruff.lint.isort]
known-first-party = ["datadoggo_v3_alpaca"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "pyright>=1.1.406",
    "ruff>=0.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.6",
    "responses>=0.25.0",
    "pyfakefs>=5.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/datadoggo_v3_alpaca"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated:DeprecationWarning",
]
